--- a/app/src/main/res/layout/activity_all_cases.xml
+++ b/app/src/main/res/layout/activity_all_cases.xml
@@ -4,30 +4,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.AllCasesActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".views.AllCasesActivity">
 
     <android.support.v7.widget.Toolbar
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@android:color/black"
-        app:titleTextColor="@android:color/white"/>
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        app:titleTextColor="@android:color/white" />
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/white_background">
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginTop="20dp"
-        android:id="@+id/all_cases_rv"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-       />
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/all_cases_rv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="20dp" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/add_case_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_margin="20dp"
+            android:backgroundTint="@android:color/black"
+            android:src="@drawable/ic_add_white_24dp" />
 
     </RelativeLayout>
 
