--- a/app/src/main/res/layout/activity_counsel_desk.xml
+++ b/app/src/main/res/layout/activity_counsel_desk.xml
@@ -11,6 +11,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:background="@android:color/black"
         app:titleTextColor="@android:color/white" />
 
