--- a/app/src/main/res/layout/counsel_item.xml
+++ b/app/src/main/res/layout/counsel_item.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="80dp"
     android:layout_margin="5dp"
     android:background="@android:color/darker_gray"
     android:elevation="5dp"
@@ -11,12 +11,17 @@
     <RelativeLayout
         android:id="@+id/card_relative_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="5dp">
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="5dp"
+            android:layout_height="match_parent"
+            android:background="@android:color/black" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -24,18 +29,21 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp">
 
-                <TextView
+                <com.example.devrathrathee.legal.utils.RobotoBoldTextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
                     android:text="Counselor"
-                    android:textStyle="bold" />
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/edit_text_size" />
 
-                <TextView
+                <com.example.devrathrathee.legal.utils.RobotoLightTextView
                     android:id="@+id/counselor_name_tv_name_tv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="7" />
+                    android:layout_weight="7"
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/edit_text_size" />
 
             </LinearLayout>
 
@@ -44,18 +52,21 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp">
 
-                <TextView
+                <com.example.devrathrathee.legal.utils.RobotoBoldTextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
                     android:text="Parties"
-                    android:textStyle="bold" />
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/edit_text_size" />
 
-                <TextView
+                <com.example.devrathrathee.legal.utils.RobotoLightTextView
                     android:id="@+id/parties_name_tv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="7" />
+                    android:layout_weight="7"
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/edit_text_size" />
 
             </LinearLayout>
 
@@ -64,18 +75,21 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp">
 
-                <TextView
+                <com.example.devrathrathee.legal.utils.RobotoBoldTextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="3"
                     android:text="Status"
-                    android:textStyle="bold" />
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/edit_text_size" />
 
-                <TextView
+                <com.example.devrathrathee.legal.utils.RobotoLightTextView
                     android:id="@+id/status_tv"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="7" />
+                    android:layout_weight="7"
+                    android:textColor="@android:color/black"
+                    android:textSize="@dimen/edit_text_size" />
 
             </LinearLayout>
 
